5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3858/executions/1795_3136.log
== TEST (2019-05-30 17:25:49) 
-- CODE:
from math import *
from numpy import *

n = array(eval())
i = 0
x=0

while(i<size(n)):
	x = x + (log(n[i]) +1 )

m = exp(x/n)-1

print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:25:51) 
-- CODE:
from math import *
from numpy import *

n = array(eval())
i = 0
x=0

while(i<size(n)):
	x = x + (log(n[i]) +1 )

m = exp(x/n)-1

print(round(m,2))
-- EXECUTION TIME:
4.47608
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3136/main.py", line 4, in <module>
    n = array(eval())
TypeError: eval expected at least 1 arguments, got 0

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:26:12) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
i = 0
x=0

while(i<size(n)):
	x = x + (log(n[i]) +1 )

m = exp(x/n)-1

print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:26:21) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
i = 0
x=0

while(i<size(n)):
	x = x + (log(n[i]) +1 )

m = exp(x/n)-1

print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:27:59) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
i = 0
x=0

while(i<size(n)):
	x = x + log(n[i]) +1 
	i=i+1
m = exp(x/n)-1

print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:28:09) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
i = 0
x=0

while(i<size(n)):
	x = x + log(n[i]) +1 
	i=i+1
m = exp(x/n)-1

print(round(m,2))
-- EXECUTION TIME:
8.73611
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3136/main.py", line 13, in <module>
    print(round(m,2))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:29:04) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
i = 0
x=0
t=size(n)

while(i<size(n)):
	x = x + log(n[i]) +1 
	i=i+1
m = exp(x/t)-1

print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:29:16) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
i = 0
x=0
t=size(n)

while(i<size(n)):
	x = x + log(n[i]) +1 
	i=i+1
m = exp(x/t)-1

print(round(m,2))
-- EXECUTION TIME:
4.2017
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.53
---- user output:
11.06
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.44
---- user output:
7.95
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.84
---- user output:
6.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:29:33) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
i = 0
x=0
t=size(n)

while(i<size(n)):
	x = x + log(n[i]) +1 
	i=i+1
m = exp(x/t)-1

print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:29:46) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
i = 0
x=0
t=size(n)

while(i<size(n)):
	x = x + log(n[i]) +1 
	i=i+1
m = exp(x/t)-1

print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:30:33) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
i = 0
x=0
t=size(n)

while(i<size(n)):
	a = n[i]
	x = x + log(a) +1 
	i=i+1
m = exp(x/t)-1

print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:30:44) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
i = 0
x=0
t=size(n)

while(i<size(n)):
	a = n[i]
	x = x + log(a) +1 
	i=i+1
m = exp(x/t)-1

print(round(m,2))
-- EXECUTION TIME:
6.27233
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.53
---- user output:
11.06
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.44
---- user output:
7.95
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.84
---- user output:
6.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:31:41) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
i = 0
x=0
t=size(n)

while(i<size(n)):
	a = n[i]
	x = x + log(a) +1 
	i=i+1
	print[i]
m = exp(x/t)-1
pritn(t)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:31:57) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
i = 0
x=0
t=size(n)

while(i<size(n)):
	a = n[i]
	x = x + log(a) +1 
	i=i+1
	print(i)
m = exp(x/t)-1
pritn(t)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:32:10) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
i = 0
x=0
t=size(n)

while(i<size(n)):
	a = n[i]
	x = x + log(a) +1 
	i=i+1
	print(i)
m = exp(x/t)-1
print(t)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:33:02) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
i = 0
x=0
t=size(n)

while(i<size(n)-1):
	a = n[i]
	x = x + log(a) +1 
	i=i+1
	print(i)
m = exp(x/t)-1
print(t)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:34:03) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
i = 0
x=0
t=size(n)

while(i<size(n-1)):
	a = n[i]
	x = x + log(a) +1 
	i=i+1
	print(i)
m = exp(x/t)-1
print(t)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:34:28) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
i = 0
x=0
t=size(n)

while(i<size(n-1)):
	a = n[i]
	x = x + log(a) +1 
	i=i+1
	print(i)
m = exp(x/t)-1
print(t)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:34:48) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
i = 0
x=0
t=size(n)

while(i<t-1):
	a = n[i]
	x = x + log(a) +1 
	i=i+1
	print(i)
m = exp(x/t)-1
print(t)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:35:50) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
i = 0
x=0
t=size(n)

while(i<t-1):
	a = n[i]
	x = x + log(a) +1 
	i=i+1
	print(i)
m = (x/t)-1
m = exp(m)
print(t)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:36:05) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
i = 0
x=0
t=size(n)

while(i<t):
	a = n[i]
	x = x + log(a) +1 
	i=i+1
	print(i)
m = (x/t)-1
m = exp(m)
print(t)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:36:10) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
i = 0
x=0
t=size(n)

while(i<t):
	a = n[i]
	x = x + log(a) +1 
	i=i+1
	print(i)
m = (x/t)-1
m = exp(m)
print(t)
print(round(m,2))
-- EXECUTION TIME:
1.95738
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.53
---- user output:
1
2
3
4
5
6
7
7
4.44
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.44
---- user output:
1
2
3
4
5
6
6
3.29
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.84
---- user output:
1
2
3
4
5
5
2.72
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:36:36) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
i = 0
x=0
t=size(n)

while(i<t):
	a = n[i]
	x = x + log(a) +1 
	i=i+1
m = (x/t)-1
m = exp(m)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:36:49) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
i = 0
x=0
t=size(n)

while(i<t):
	a = n[i]
	x = x + log(a) +1 
	i=i+1
m = (x/t)-1
m = exp(m)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:37:24) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
i = 0
x=0
t=size(n)-1

while(i<t):
	a = n[i]
	x = x + log(a) +1 
	i=i+1
m = (x/t)-1
m = exp(m)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:37:46) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
i = 0
x=0
t=size(n)

while(i<t):
	a = n[i]
	x = x + log(a) +1 
	i=i+1
m = (x/t)-1
m = exp(m)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:38:04) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
i = 0
x=0
t=size(n)

while(i<t):
	a = n[i]
	x = x + log(a) +1 
	i=i+1
m = (x/t)-1
m = exp(m)
print(round(m,2))
-- EXECUTION TIME:
2.2915
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.53
---- user output:
4.44
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.44
---- user output:
3.29
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.84
---- user output:
2.72
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:39:21) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
i = 0
x=0
t=size(n)

while(i<t):
	a = n[i]
	x = x + log(a) +1 
	i=i+1
m = (x/t)-1
m = exp(m)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:40:27) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
i = 0
x=0.0
t=size(n)

while(i<t):
	a = n[i]
	x = x + log(a) +1 
	i=i+1
m = (x/t)-1
m = exp(m)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:41:41) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
i = 0
x=0.0
t=size(n)

while(i<t):
	a = n[i]
	x = x + (log(a) +1) 
	i=i+1
m = (x/t)-1
m = exp(m)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:41:45) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
i = 0
x=0.0
t=size(n)

while(i<t):
	a = n[i]
	x = x + (log(a) +1) 
	i=i+1
m = (x/t)-1
m = exp(m)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:41:49) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
i = 0
x=0.0
t=size(n)

while(i<t):
	a = n[i]
	x = x + (log(a) +1) 
	i=i+1
m = (x/t)-1
m = exp(m)
print(round(m,2))
-- EXECUTION TIME:
2.17114
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.53
---- user output:
4.44
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.44
---- user output:
3.29
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.84
---- user output:
2.72
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:41:49) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
i = 0
x=0.0
t=size(n)

while(i<t):
	a = n[i]
	x = x + (log(a) +1) 
	i=i+1
m = (x/t)-1
m = exp(m)
print(round(m,2))
-- EXECUTION TIME:
2.66317
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.53
---- user output:
4.44
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.44
---- user output:
3.29
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.84
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:44:14) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))

i = 0

t=size(n)

while(i<t):
	a = n[i]
	x = x + (log(a) +1) 
	i=i+1
m = (x/t)-1
m = exp(m)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:44:24) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))

i = 0
x=0
t=size(n)

while(i<t):
	a = n[i]
	x = x + (log(a) +1) 
	i=i+1
m = (x/t)-1
m = exp(m)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:44:56) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))

i = 0
x=0
t=size(n)

while(i<t):
	a = n[i]
	x = x + (log(a) +1) 
	i=i+1
m = (x/t)
m = exp(m)-1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:44:58) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))

i = 0
x=0
t=size(n)

while(i<t):
	a = n[i]
	x = x + (log(a) +1) 
	i=i+1
m = (x/t)
m = exp(m)-1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:45:09) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))

i = 0
x=0
t=size(n)

while(i<t):
	a = n[i]
	x = x + (log(a) +1) 
	i=i+1
m = (x/t)
m = exp(m)-1
print(round(m,2))
-- EXECUTION TIME:
7.22704
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.53
---- user output:
11.06
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.44
---- user output:
7.95
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.84
---- user output:
6.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:45:46) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))

i = 0
x=0
t=size(n)

while(i<t):
	
	x = x + (log(n[i]) +1) 
	i=i+1
m = (x/t)
m = exp(m)-1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:45:53) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))

i = 0
x=0
t=size(n)

while(i<t):
	
	x = x + (log(n[i]) +1) 
	i=i+1
m = (x/t)
m = exp(m)-1
print(round(m,2))
-- EXECUTION TIME:
2.86915
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.53
---- user output:
11.06
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.44
---- user output:
7.95
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.84
---- user output:
6.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:46:25) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))

i = 0
x=0
t=size(n)

while(i<t):
	
	x = x + (log(n[i]) +1) 
	i=i+1

m = exp(m/t)-1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:46:30) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))

i = 0
x=0
t=size(n)

while(i<t):
	
	x = x + (log(n[i]) +1) 
	i=i+1

m = exp(m/t)-1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:46:40) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))

i = 0
x=0
t=size(n)

while(i<t):
	
	x = x + (log(n[i]) +1) 
	i=i+1

m = exp(m/t)-1
print(round(m,2))
-- EXECUTION TIME:
3.24536
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3136/main.py", line 15, in <module>
    m = exp(m/t)-1
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:46:40) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))

i = 0
x=0
t=size(n)

while(i<t):
	
	x = x + (log(n[i]) +1) 
	i=i+1

m = exp(m/t)-1
print(round(m,2))
-- EXECUTION TIME:
3.65961
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3136/main.py", line 15, in <module>
    m = exp(m/t)-1
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:46:47) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))

i = 0
x=0
t=size(n)

while(i<t):
	
	x = x + (log(n[i]) +1) 
	i=i+1

m = exp(m/t)-1
print(round(m,2))
-- EXECUTION TIME:
2.78137
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3136/main.py", line 15, in <module>
    m = exp(m/t)-1
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:47:37) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))

i = 0
x=0
t=size(n)

while(i<t):
	
	x = x + (log(n[i]) +1) 
	i=i+1

m = exp(m/t)-1
print(round(m,2))
-- EXECUTION TIME:
3.36563
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3136/main.py", line 15, in <module>
    m = exp(m/t)-1
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:47:38) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))

i = 0
x=0
t=size(n)

while(i<t):
	
	x = x + (log(n[i]) +1) 
	i=i+1

m = exp(m/t)-1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:48:00) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
m=0
i = 0
x=0
t=size(n)

while(i<t):
	
	x = x + (log(n[i]) +1) 
	i=i+1

m = exp(m/t)-1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:48:04) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
m=0
i = 0
x=0
t=size(n)

while(i<t):
	
	x = x + (log(n[i]) +1) 
	i=i+1

m = exp(m/t)-1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:48:08) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
m-0
i = 0
x=0
t=size(n)

while(i<t):
	
	x = x + (log(n[i]) +1) 
	i=i+1

m = exp(m/t)-1
print(round(m,2))
-- EXECUTION TIME:
2.78809
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3136/main.py", line 5, in <module>
    m-0
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:48:12) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
i = 0
x=0

while(i<size(n)):
	x = x + log(n[i]) +1 

m = exp(x/n)-1

print(round(m,2))
-- EXECUTION TIME:
1225.56
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:48:14) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
m=0
i = 0
x=0
t=size(n)

while(i<t):
	
	x = x + (log(n[i]) +1) 
	i=i+1

m = exp(m/t)-1
print(round(m,2))
-- EXECUTION TIME:
5.35586
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.53
---- user output:
0.0
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.44
---- user output:
0.0
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.84
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:48:14) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
i = 0
x=0

while(i<size(n)):
	x = x + (log(n[i]) +1 )

m = exp(x/n)-1

print(round(m,2))
-- EXECUTION TIME:
1312.76
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:48:14) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
m=0
i = 0
x=0
t=size(n)

while(i<t):
	
	x = x + (log(n[i]) +1) 
	i=i+1

m = exp(m/t)-1
print(round(m,2))
-- EXECUTION TIME:
3.94541
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.53
---- user output:
0.0
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.44
---- user output:
0.0
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.84
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:48:14) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
m=0
i = 0
x=0
t=size(n)

while(i<t):
	
	x = x + (log(n[i]) +1) 
	i=i+1

m = exp(m/t)-1
print(round(m,2))
-- EXECUTION TIME:
8.91212
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.53
---- user output:
0.0
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.44
---- user output:
0.0
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.84
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:48:15) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
m=0
i = 0
x=0
t=size(n)

while(i<t):
	
	x = x + (log(n[i]) +1) 
	i=i+1

m = exp(m/t)-1
print(round(m,2))
-- EXECUTION TIME:
9.20547
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.53
---- user output:
0.0
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.44
---- user output:
0.0
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.84
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:48:18) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))
m=0
i = 0
x=0
t=size(n)

while(i<t):
	
	x = x + (log(n[i]) +1) 
	i=i+1

m = exp(m/t)-1
print(round(m,2))
-- EXECUTION TIME:
1.06284
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.53
---- user output:
0.0
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.44
---- user output:
0.0
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.84
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:48:31) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))

i = 0
x=0
t=size(n)

while(i<t):
	
	x = x + (log(n[i]) +1) 
	i=i+1

m = exp(m/t)-1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:48:49) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))

i = 0
x=0
t=size(n)

while(i<t):
	
	x = x + (log(n[i]) +1) 
	i=i+1

m = exp(x/t)-1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:48:52) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))

i = 0
x=0
t=size(n)

while(i<t):
	
	x = x + (log(n[i]) +1) 
	i=i+1

m = exp(x/t)-1
print(round(m,2))
-- EXECUTION TIME:
1.7218
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.53
---- user output:
11.06
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.44
---- user output:
7.95
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.84
---- user output:
6.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:49:06) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))

i = 0
x=0
t=size(n)

while(i<t):
	
	x = x + (log(n[i]) +1) 
	i=i+1

m = exp(x/t)-1 /2
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:49:25) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))

i = 0
x=0
t=size(n)

while(i<t):
	
	x = x + (log(n[i]) +1) 
	i=i+1

m = exp(x/t)-1
print(round(m/2,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:49:29) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))

i = 0
x=0
t=size(n)

while(i<t):
	
	x = x + (log(n[i]) +1) 
	i=i+1

m = exp(x/t)-1
print(round(m/2,2))
-- EXECUTION TIME:
2.15726
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.53
---- user output:
5.53
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.44
---- user output:
3.98
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.84
---- user output:
3.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:50:47) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))

i = 0
x=0
t=size(n)

while(i<t):
	
	x = x + (log(n[i]) +1) 
	i=i+1

m = exp(x/t)-1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:51:00) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))

i = 0
x=0
t=size(n)

while(i<t):
	
	x = x +  0 +(log(n[i]) +1) 
	i=i+1

m = exp(x/t)-1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:51:12) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))

i = 0
x=0
t=size(n)

while(i<t):
	
	x = x +(log(n[i]) +1) 
	i=i+1

m = exp(x/t)-1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:52:41) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))

i = 0
x = 0
t = size(n)

while(i<t):
	
	x = x + ( log( n[i] ) + 1) 
	i = i + 1

m = exp(x/t)-1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:53:11) 
-- CODE:
from math import *
from numpy import *

n = array(eval(input()))

i = 0
x = 0
t = size(n)

while(i<t):
	
	x = x + ( log( n[i] +1)) 
	i = i + 1

m = exp(x/t)-1
print(round(m,2))
-- EXECUTION TIME:
2.28265
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.53
---- user output:
4.53
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.44
---- user output:
3.44
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.84
---- user output:
2.84
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
